--- a/SOSInventoryQBIntegration/appsettings.json
+++ b/SOSInventoryQBIntegration/appsettings.json
@@ -12,7 +12,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=DESKTOP-PAIRCPP;Database=SOSInventoryQBIntegration;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
+          "connectionString": "Server=.;Database=SOSInventoryQBIntegration;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": "true"
         }
@@ -21,7 +21,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PAIRCPP;Database=SOSInventoryQBIntegration;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=SOSInventoryQBIntegration;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "QBCredentials": {
     "QBBaseURL": "https://sandbox-quickbooks.api.intuit.com/",
